<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>waypoint_executive</name>
  <version>0.0.0</version>
  <description>waypoint_executive Package</description>
  <maintainer email="crs.aggies@gmail.com">Cyclone RoboSub UC Davis</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <build_depend>sensor_msgs</build_depend>

  <depend>python3</depend>
  <exec_depend>ros2launch</exec_depend>
  <test_depend>python3-pytest</test_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>geometry_msgs</depend>
  <depend>crs_ros2_interfaces</depend>


  <test_depend>ament_cmake_gtest</test_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>ament_cmake_gtest</build_depend>
  <build_depend>gtest_vendor</build_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>